hphp/test/slow/object/ctor_fail.php.expectf
Fatal error: Call to private Asd::__construct() from invalid context in %s/slow/object/ctor_fail.php on line 9
